# wordsearch

./: Cargo.toml  LICENSE  README.md
benches/: benchmark.rs
src/: lib.rs  main.rs
tests/: integration_test.rs
