[package]
name = "wordsearch"
version = "0.1.0"
authors = ["Rob Dimsdale-Zucker <robert.dimsdale@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
rand = "0.7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
